# ipmgr

./: CMakeLists.txt  README.md  TODO.md
conf/: README-ipmgr.md  README-static-zones.md  README-zones.md  README.md  ipmgr-options.conf  ipmgr.conf  trusted_hosts
conf/logger/: ipmgr.conf
debian/: changelog  control  copyright  ipmgr-doc.doc-base  ipmgr-doc.install  ipmgr.config  ipmgr.dirs  ipmgr.install  ipmgr.postinst  ipmgr.postrm  ipmgr.templates  ipmgr.tmpfiles  ipmgr.triggers  rules
doc/: CMakeLists.txt  dns-options.1  ipmgr-logo.xcf  ipmgr.1  ipmgr.doxy.in
ipmgr/: CMakeLists.txt  exception.h  ipmgr.cpp  ipmgr.h  main.cpp  version.h.in
tests/: CMakeLists.txt  catch_dns_options.cpp  catch_main.cpp  catch_main.h
tests/scripts/: fix-name-among-fields.conf  fix-name.conf  get-version.conf  remove-version.conf  replace-number.conf  replace-string.conf  update-option.conf
tools/: .CMakeLists.txt.swp  CMakeLists.txt  dns-setup  dns-setup.sh  dns_options.cpp
